--- a/less/popup.less
+++ b/less/popup.less
@@ -194,9 +194,10 @@ body {
                     text-align: center;
 
                     img.bedge {
+                        width: 35px;
                         position: absolute;
-                        right: -5px;
-                        top: -5px;
+                        right: -15px;
+                        top: -15px;
                         opacity: 0.0;
                     }
 
@@ -691,7 +692,6 @@ body {
 
                     select {
                         background-image: url(../img/popup/select_bg.png);
-                        ;
                         .backgroundOption;
                         background-size: 14PX;
                         background-position-x: 95%;
