--- a/css/common.css
+++ b/css/common.css
@@ -266,7 +266,7 @@ div#wrap header {
 div#wrap header div.gnb_line {
   width: 100%;
   height: 100px;
-  border-bottom: 1px solid lightgray;
+  border-bottom: 1px solid #e9e9e9;
   box-sizing: border-box;
 }
 div#wrap header div.gnb_line div.wrap {
@@ -307,7 +307,7 @@ div#wrap header div.gnb_line div.wrap div.tel_bar {
   line-height: 36px;
   float: left;
   box-sizing: border-box;
-  border-left: 1px solid lightgray;
+  border-left: 1px solid #d0d0d0;
   padding-left: 30px;
   font-size: 1.25rem;
   font-weight: bold;
@@ -320,7 +320,7 @@ div#wrap header div.gnb_nav {
   width: 100%;
   height: 50px;
   background-color: white;
-  border-bottom: 1px solid lightgray;
+  border-bottom: 1px solid #e9e9e9;
   box-sizing: border-box;
   position: relative;
   right: 0%;
@@ -344,7 +344,7 @@ div#wrap header div.gnb_nav div.wrap nav ul li {
   float: left;
   text-align: center;
   box-sizing: border-box;
-  border-left: 1px solid lightgray;
+  border-left: 1px solid #e9e9e9;
   font-size: 1rem;
 }
 div#wrap header div.gnb_nav div.wrap nav ul li a {
@@ -362,7 +362,7 @@ div#wrap header div.gnb_nav div.wrap nav ul li p {
   margin: 0 auto;
 }
 div#wrap header div.gnb_nav div.wrap nav ul li:nth-last-child(1) {
-  border-right: 1px solid lightgray;
+  border-right: 1px solid #e9e9e9;
 }
 div#wrap header div.gnb_nav div.wrap nav ul li.active a {
   font-weight: bold;
