--- a/less/common.less
+++ b/less/common.less
@@ -270,7 +270,7 @@ div#wrap{
         div.gnb_line{
             width: 100%;
             height: 100px;
-            border-bottom: 1px solid lightgray;
+            border-bottom: 1px solid #e9e9e9;
             box-sizing: border-box;
             div.wrap{
                 line-height: 100px;
@@ -309,7 +309,7 @@ div#wrap{
                     line-height: 36px;
                     float: left;
                     box-sizing: border-box;
-                    border-left: 1px solid lightgray;
+                    border-left: 1px solid #d0d0d0;
                     padding-left: 30px;
                     font-size: 1.250rem;
                     font-weight: bold;
@@ -325,7 +325,7 @@ div#wrap{
             width: 100%;
             height: 50px;
             background-color: white;
-            border-bottom: 1px solid lightgray;
+            border-bottom: 1px solid #e9e9e9;
             box-sizing: border-box;
             position: relative;
             right:0%;
@@ -344,7 +344,7 @@ div#wrap{
                             float: left;
                             text-align: center;
                             box-sizing: border-box;
-                            border-left: 1px solid lightgray;
+                            border-left: 1px solid #e9e9e9;
                             font-size: 1rem;
                             a{
                                 height: 48px;
@@ -361,7 +361,7 @@ div#wrap{
                                 margin: 0 auto;
                             }
                             &:nth-last-child(1){
-                                border-right: 1px solid lightgray;
+                                border-right: 1px solid #e9e9e9;
                             }
                         }
                         li.active{
