--- a/less/style_main.less
+++ b/less/style_main.less
@@ -99,7 +99,23 @@ body {
                                 box-sizing: border-box;
                                 outline: none;
                                 padding-left: 10px;
-
+                                line-height: 52px;
+                            }
+                            input::placeholder{
+                                font-size: 1.125rem;
+                                color: #222;;
+                            }
+                            select{
+                                width: 100%;
+                                height: 100%;
+                                border: 2px solid #d9d9d9;
+                                box-sizing: border-box;
+                                outline: none;
+                                padding-left: 10px;
+                                background-image: url(../img/popup/select_bg.png);
+                                .backgroundOption;
+                                background-size: 14PX;
+                                background-position-x: 95%;
                             }
                         }
                     }
@@ -1594,20 +1610,21 @@ body {
                         cursor: pointer;
                         width: 285px;
                         height: 250px;
-                        border:2px solid #d9d9d9;
+                        border:1px solid #d9d9d9;
                         box-sizing: border-box;;
                         float: left;
                         // margin-right: 15px;
                         margin-bottom: 10px;;
-                        border-radius: 15px;
+                        border-radius: 5px;
                         padding-top: 20px;
                         text-align: center;;
                         margin-right: 5px;
                         margin-left: 5px;
                         
                         img.bedge{
+                            width: 35px;
                             float: right;
-                            transform: translate(30%,-30%);
+                            transform: translate(30%,-100%);
                             opacity: 0.0;
                         }
                         .fn_icon{
