--- a/css/popup.css
+++ b/css/popup.css
@@ -703,7 +703,7 @@ body {
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab {
   width: 100%;
-  height: 420px;
+  height: 520px;
   margin: 20px auto;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_left {
@@ -825,6 +825,7 @@ body {
   font-size: 0.875rem;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_right div.ins_info_tab ul li div.list_desc {
+  width: 500px;
   height: 100%;
   float: left;
   color: #444;
@@ -1045,4 +1046,202 @@ select:focus {
 input[type=number]:focus {
   outline: none;
   border: 2px solid #ec6647;
+}
+div.ins_tabs.more_ins {
+  height: 700px!important;
+}
+div.ins_tabs.more_ins div.cal_top_tab {
+  overflow: hidden;
+}
+div.ins_tabs.more_ins div.cal_top_tab div.user_info {
+  box-sizing: border-box;
+  text-align: center;
+}
+div.ins_tabs.more_ins div.cal_top_tab div.user_info img.more_logo {
+  display: block;
+  width: 100px;
+  margin: 0 auto;
+  padding-top: 15px;
+}
+div.ins_tabs.more_ins div.cal_top_tab div.user_info span.more_cate {
+  display: block;
+  width: 100%;
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: 1.125rem;
+  text-align: center;
+}
+div.ins_tabs.more_ins div.cal_top_tab div.place_info.place_more {
+  width: 78%!important;
+  margin-right: 0!important;
+  position: relative;
+}
+div.ins_tabs.more_ins div.cal_top_tab div.place_info.place_more p span {
+  color: #666 !important;
+  font-size: 0.875rem !important;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.ins_info_tab {
+  float: right;
+  height: 480px!important;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth {
+  width: 68%!important;
+  float: left!important;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul {
+  height: 330px;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row {
+  width: 100%;
+  overflow: inherit;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord {
+  width: 90%;
+  max-width: 410px;
+  height: 100px;
+  border: 1px solid #d0d0d0;
+  overflow: hidden;
+  margin-top: 10px;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.null_data {
+  width: 100%;
+  height: 100%;
+  line-height: 100px;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.row {
+  width: 100%;
+  height: 33.3%;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.row div.colum {
+  height: 100%;
+  text-align: center;
+  float: left;
+  line-height: 33.3px;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.row div.colum.colum-4 {
+  width: 25%;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.row div.colum.colum-6 {
+  width: calc(100%/6);
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.row div.colum_head {
+  width: 20%;
+  font-size: 0.875rem;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.row div.colum_body {
+  width: 40%;
+  font-size: 0.875rem;
+  position: relative;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.row div.colum_body span.gender_mark {
+  position: absolute;
+  line-height: 25px;
+  color: white;
+  border-radius: 100%;
+  font-size: 0.753rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.row div.colum_body .man_mark {
+  background: #24a1e9;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.row div.colum_body .woman_mark {
+  background: #ff449c;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.tb_body1 .colum {
+  background-color: #f0f0f0;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.tb_body1 div {
+  color: #24a1e9;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.tb_body2 {
+  border: 0px;
+}
+div.ins_tabs.more_ins div.cal_bottom_tab div.bottom_right.section_rigth ul li.price_row div.price_bord div.tb_body2 div {
+  font-size: 0.875rem;
+  color: #ff449c;
+}
+div.ins_tabs.more_ins div.input_tab {
+  width: 30%;
+  height: 480px;
+  float: right;
+  background: white;
+  border: 1px solid #d0d0d0;
+  box-sizing: border-box;
+  border-radius: 5px;
+  padding: 20px;
+}
+div.ins_tabs.more_ins div.input_tab h3 {
+  font-weight: bold;
+  margin-bottom: 25px!important;
+}
+div.ins_tabs.more_ins div.input_tab ul li {
+  width: 100%;
+  height: 60px;
+  margin-bottom: 15px;
+}
+div.ins_tabs.more_ins div.input_tab ul li p {
+  height: 15px;
+  font-size: 0.875rem;
+  color: #444;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+div.ins_tabs.more_ins div.input_tab ul li input,
+div.ins_tabs.more_ins div.input_tab ul li select {
+  height: 40px;
+  width: 100%;
+  border: 2px solid #d0d0d0;
+  outline: none;
+  box-sizing: border-box;
+  padding-left: 15px;
+}
+div.ins_tabs.more_ins div.input_tab ul li.phones select {
+  width: 35%;
+  float: left;
+}
+div.ins_tabs.more_ins div.input_tab ul li.phones input {
+  width: 63%;
+  float: right;
+}
+div.ins_tabs.more_ins div.input_tab label.container {
+  padding-top: 3px;
+  font-size: 0.875rem;
+}
+div.ins_tabs.more_ins div.input_tab label.container span.checkmark {
+  width: 20px;
+  height: 20px;
+}
+div.ins_tabs.more_ins div.input_tab .container .checkmark:after {
+  top: 2px;
+  left: 5px;
+}
+div.ins_tabs.more_ins div.input_tab div.more_submit_btn {
+  cursor: pointer;
+  margin: 10px auto;
+  width: 260px;
+  height: 40px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  background: #ec6647;
+  line-height: 40px;
+  border-radius: 5px;
+}
+div.submit_btns {
+  cursor: pointer;
+  width: 250px!important;
+  height: 40px!important;
+  background: #ec6647 !important;
+  margin: 0 auto;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  background: #ec6647;
+  line-height: 40px;
+  border-radius: 35px;
 }
