--- a/less/popup.less
+++ b/less/popup.less
@@ -916,7 +916,7 @@ body {
 
                 div.cal_bottom_tab {
                     width: 100%;
-                    height: 420px;
+                    height:520px;
                     margin: 20px auto;
                     ;
 
@@ -1062,6 +1062,7 @@ body {
                                     }
 
                                     div.list_desc {
+                                        width: 500px;
                                         height: 100%;
                                         float: left;
                                         color: #444;
@@ -1316,11 +1317,8 @@ body {
                     textarea:focus {
                         border: 2px solid @mainColor;
                     }
-
                 }
-
             }
-
             div.sub_btn {
                 cursor: pointer;
                 width: 250px;
@@ -1355,4 +1353,241 @@ select:focus {
 input[type=number]:focus {
     outline: none;
     border: 2px solid @mainColor;
+}
+
+div.ins_tabs.more_ins{
+    height: 700px!important;
+        // text-align: center;
+        div.cal_top_tab{
+            overflow: hidden;
+            div.user_info{
+                box-sizing: border-box;
+                text-align: center;
+                img.more_logo{
+                    display: block;
+                    width: 100px;
+                    margin: 0 auto;;
+                padding-top: 15px;
+
+                }
+                span.more_cate{
+                    display: block;;
+                    width: 100%;
+                    margin-top: 20px;;
+                    font-weight: bold;;
+                    font-size: 1.125rem;
+                    text-align: center;;
+            }
+            }
+            div.place_info.place_more{
+                width: 78%!important;
+                margin-right: 0!important;
+                position: relative;
+                p{
+                    span{
+                        color: #666!important;
+                        font-size: 0.875rem!important;
+                    }
+                }
+            }
+        }
+        div.cal_bottom_tab{
+           
+            div.ins_info_tab{
+                float: right;
+                height: 480px!important;
+            }
+           
+            div.bottom_right.section_rigth{
+                width: 68%!important;
+                float: left!important;
+                ul{
+                    height: 330px;
+                    li.price_row{
+                        width: 100%;
+                        overflow: inherit;
+                        div.price_bord {
+                            width: 90%;
+                            max-width: 410px;
+                            height: 100px;
+                            border: 1px solid #d0d0d0;
+                            overflow: hidden;
+                            margin-top: 10px;
+
+                            div.null_data {
+                                width: 100%;
+                                height: 100%;
+                                line-height: 100px;
+                            }
+
+                            div.row {
+                                width: 100%;
+                                height: 33.3%;
+
+                                div.colum {
+                                    height: 100%;
+                                    text-align: center;
+                                    ;
+                                    float: left;
+                                    line-height: 33.3px;
+                                }
+
+                                div.colum.colum-4 {
+                                    width: 25%;
+                                }
+
+                                div.colum.colum-6 {
+                                    width: calc(100%/6);
+                                }
+
+                                div.colum_head {
+                                    width: 20%;
+                                    font-size: 0.875rem;
+                                }
+
+                                div.colum_body {
+                                    width: 40%;
+                                    font-size: 0.875rem;
+                                    position: relative;
+
+                                    span.gender_mark {
+                                        position: absolute;
+                                        line-height: 25px;
+                                        color: white;
+                                        border-radius: 100%;
+                                        font-size: 0.753rem;
+                                        top: 50%;
+                                        left: 50%;
+                                        transform: translate(-50%, -50%);
+                                        display: inline-block;
+                                        width: 20px;
+                                        height: 20px;
+                                        ;
+                                    }
+
+                                    .man_mark {
+                                        background: #24a1e9;
+                                    }
+
+                                    .woman_mark {
+                                        background: #ff449c;
+                                    }
+                                }
+
+                            }
+
+                            div.tb_body1 {
+                                .colum {
+                                    background-color: #f0f0f0;
+
+                                }
+
+                                div {
+                                    color: #24a1e9;
+                                }
+                            }
+
+                            div.tb_body2 {
+                                border: 0px;
+
+                                div {
+                                    font-size: 0.875rem;
+                                    color: #ff449c;
+                                }
+                            }
+
+                        }
+                    }
+                }
+            }
+           
+        }
+        div.input_tab{
+            width: 30%;
+            height: 480px;
+            float: right;
+            background: white;
+            border:1px solid #d0d0d0;
+            box-sizing: border-box;;
+            border-radius: 5px;
+            padding: 20px;
+            h3{
+                font-weight: bold;;
+                margin-bottom: 25px!important;
+            }
+            ul{
+                li{
+                    width: 100%;
+                    height: 60px;
+                    margin-bottom: 15px;
+                    p{
+                        height: 15px;
+                        font-size: 0.875rem;
+                        color: #444;
+                        margin-bottom: 5px;
+                        font-weight: bold;;
+                    }
+                    input,select{
+                        height: 40px;
+                        width: 100%;
+                        border: 2px solid #d0d0d0;
+                        outline: none;
+                        box-sizing: border-box;;
+                        padding-left: 15px;
+                    }
+                    
+                }
+                li.phones{
+                    select{
+                        width: 35%;
+                        float: left;
+                    }
+                    input{
+                        width: 63%;
+                        float: right;
+                    }
+                }
+            }
+            label.container{
+                padding-top: 3px;
+                font-size: 0.875rem;
+                span.checkmark{
+                    width: 20px;
+                    height: 20px;
+                    
+                }
+            }
+            .container .checkmark:after{
+                top: 2px;
+                left: 5px;
+            }
+            div.more_submit_btn{
+                cursor: pointer;
+                margin: 10px auto;;
+                width: 260px;
+                height: 40px;
+                font-weight: bold;
+                color: white;
+                text-align: center;
+                background: @mainColor;
+                line-height: 40px;
+                border-radius: 5px;;
+            }
+        }
+        
+        
+}
+div.submit_btns{
+    cursor: pointer;
+    width: 250px!important;
+    height: 40px!important;
+    background: @mainColor!important;;
+    margin: 0 auto;;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    background: @mainColor;
+    line-height: 40px;
+    border-radius: 35px;;
+
 }
