--- a/css/style_main.css
+++ b/css/style_main.css
@@ -1371,7 +1371,7 @@ body {
   height: 40px;
   margin: 30px auto;
   text-align: center;
-  line-height: 40px;
+  line-height: 38px;
   border: 2px solid #d0d0d0;
   box-sizing: border-box;
   color: #444;
@@ -1450,4 +1450,278 @@ body {
 }
 #wrap main.page5 section.top_banner {
   background-image: url(../img/sub_page/page5-banner1.jpg);
+}
+#wrap main.page5 section.section1 {
+  background: white;
+  padding-bottom: 200px;
+}
+#wrap main.page5 section.section1 div.page5-nav {
+  background: rosybrown;
+  max-width: 1200px;
+  height: 100%;
+  margin: 0 auto;
+  height: 60px;
+  transform: translateY(-60px);
+}
+#wrap main.page5 section.section1 div.page5-nav div.navs {
+  cursor: pointer;
+  width: 50%;
+  height: 100%;
+  float: left;
+  line-height: 60px;
+  text-align: center;
+  background: #d9d9d9;
+  font-size: 1.125rem;
+  color: #444;
+  font-weight: bold;
+}
+#wrap main.page5 section.section1 div.page5-nav div.navs#active {
+  background: white;
+  color: #ec6647;
+}
+#wrap main.page5 section.section1 div.main_con {
+  max-width: 1200px;
+  height: 100%;
+  margin: 0 auto;
+  padding-top: 100px;
+  box-sizing: border-box;
+}
+#wrap main.page5 section.section1 div.main_con h2 {
+  font-size: 3.125rem;
+  font-weight: bold;
+  color: #222;
+  text-align: center;
+  letter-spacing: -1px;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb {
+  max-width: 1200px;
+  height: 100%;
+  margin: 0 auto;
+  height: 600px;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  border-top: 2px solid #222;
+  border-bottom: 2px solid #222;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row {
+  width: 100%;
+  height: 60px;
+  border-bottom: 1px solid #d0d0d0;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #d0d0d0;
+  outline: none;
+  padding-left: 10px;
+  box-sizing: border-box;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row div.row_tit {
+  width: 260px;
+  height: 100%;
+  float: left;
+  box-sizing: border-box;
+  padding-top: 20px;
+  color: #222;
+  padding-left: 40px;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row div.row_desc {
+  width: 800px;
+  height: 100%;
+  float: left;
+  padding-top: 10px;
+  box-sizing: border-box;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row-3 select {
+  width: 130px;
+  height: 40px;
+  background-image: url(../img/popup/select_bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 15px;
+  background-position-x: 95%;
+  border: 1px solid #d0d0d0;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row-3 input {
+  height: 40px;
+  width: 300px;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row-4 {
+  height: 180px;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row-4 textarea {
+  height: 160px;
+  width: 100%;
+  resize: none;
+  outline: none;
+  border: 1px solid #d0d0d0;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row-5 {
+  height: 240px;
+  border: 0px;
+  padding-top: 25px;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row-5 label.container {
+  padding-top: 3px;
+  font-size: 0.875rem;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row-5 label.container span.checkmark {
+  width: 20px;
+  height: 20px;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row-5 .container .checkmark:after {
+  top: 2px;
+  left: 5px;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row-5 div.agree_desc {
+  width: 100%;
+  height: 160px;
+  border: 1px solid #d0d0d0;
+  box-sizing: border-box;
+  padding: 15px;
+  font-size: 0.875rem;
+  overflow-y: scroll;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row-5 div.agree_desc p {
+  margin-bottom: 5px;
+}
+#wrap main.page5 section.section1 div.main_con div.input_tb div.row-5 div.agree_desc p.margin_point {
+  margin-bottom: 20px;
+}
+#wrap main.page5 section.section1 div.main_con div.insert_btn {
+  cursor: pointer;
+  width: 250px;
+  height: 50px;
+  background: #ec6647;
+  margin: 0 auto;
+  border-radius: 50px;
+  font-size: 1.125rem;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  line-height: 50px;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_nav {
+  max-width: 1200px;
+  height: 100%;
+  margin: 0 auto;
+  height: 60px;
+  border: 2px solid #444;
+  margin-top: 50px;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_nav div {
+  cursor: pointer;
+  width: 20%;
+  float: left;
+  height: 100%;
+  background: white;
+  text-align: center;
+  line-height: 60px;
+  border-right: 2px solid #444;
+  box-sizing: border-box;
+  color: #666;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_nav div#active {
+  background: #444;
+  color: white;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_nav div.fna_nav5 {
+  border: 0px;
+  float: right;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_box {
+  max-width: 1200px;
+  margin: 50px auto;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_box ul {
+  width: 100%;
+  border-top: 2px solid #444;
+  border-bottom: 2px solid #444;
+  box-sizing: border-box;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_box ul li {
+  height: 60px;
+  box-sizing: border-box;
+  border-bottom: 1px solid #d0d0d0;
+  position: relative;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_box ul li p {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding-left: 20px;
+  box-sizing: border-box;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_box ul li p span {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: #999;
+  text-align: center;
+  font-size: 0.875rem;
+  font-weight: bold;
+  line-height: 20px;
+  border-radius: 100%;
+  color: white;
+  margin-right: 20px;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_box ul li p b {
+  margin-right: 40px;
+  color: #888;
+  letter-spacing: -1px;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_box ul div.hide_an {
+  border-bottom: 1px solid #d0d0d0;
+  position: relative;
+  display: none;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_box ul div.hide_an p {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: #d0d0d0;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_box ul div.hide_an p span {
+  position: absolute;
+  top: 50%;
+  margin-left: 50px;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: #20a6f2;
+  text-align: center;
+  font-size: 0.875rem;
+  font-weight: bold;
+  line-height: 20px;
+  border-radius: 100%;
+  color: white;
+  margin-right: 20px;
+  transform: translateY(-50%);
+}
+#wrap main.page5 section.section1 div.main_con div.fna_box ul div.hide_an p b {
+  width: 80%;
+  display: block;
+  word-break: keep-all;
+  line-height: 25px;
+  margin-left: 120px;
+}
+#wrap main.page5 section.section1 div.main_con div.fna_box ul li:nth-last-child(1) {
+  border: 0px;
+}
+#wrap main.page5 section.section1 div.main_con ul.numbering {
+  text-align: center;
+}
+#wrap main.page5 section.section1 div.main_con ul.numbering li {
+  cursor: pointer;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #d0d0d0;
+  margin: 10px;
+  line-height: 30px;
+  color: #777;
+}
+#wrap main.page5 section.section1 div.main_con ul.numbering li#active {
+  border: 1px solid #ec6647;
+  color: #ec6647;
 }
