--- a/less/style_main.less
+++ b/less/style_main.less
@@ -1649,7 +1649,7 @@ body {
                             height: 40px;
                             margin: 30px auto;;
                             text-align: center;
-                            line-height: 40px;;
+                            line-height: 38px;;
                             border:2px solid #d0d0d0;
                             box-sizing: border-box;;
                             color: #444;
@@ -1761,6 +1761,283 @@ body {
     main.page5 {
         section.top_banner {
             background-image: url(../img/sub_page/page5-banner1.jpg);
+        }
+        section.section1{
+            background: white;
+            padding-bottom: 200px;
+            div.page5-nav{
+                background: rosybrown;
+                .wraps;
+                height: 60px;
+                transform: translateY(-60px);
+                div.navs{
+                    cursor: pointer;
+                    width: 50%;
+                    height: 100%;
+                    float: left;
+                    line-height: 60px;
+                    text-align: center;
+                    background: #d9d9d9;
+                    font-size: 1.125rem;
+                    color: #444;
+                    font-weight: bold;
+                }
+                div.navs#active{
+                    background: white;
+                    color: @mainColor;
+                }          
+
+
+            }
+            div.main_con{
+                .wraps;
+                padding-top: 100px;
+                box-sizing: border-box;;
+                h2{
+                    font-size: 3.125rem;
+                    font-weight: bold;
+                    color: #222;
+                    text-align: center;
+                    letter-spacing: -1px;
+                }
+                div.input_tb{
+                    .wraps;
+                    height: 600px;
+                    margin-top: 60px;
+                    margin-bottom: 60px;
+                    border-top: 2px solid #222;
+                    border-bottom: 2px solid #222;
+                    div.row{
+                        width: 100%;
+                        height: 60px;
+                        border-bottom: 1px solid #d0d0d0;
+                        input{
+                            width: 100%;
+                            height: 40px;
+                            border: 1px solid #d0d0d0;
+                            outline: none;
+                            padding-left: 10px;
+                            box-sizing: border-box;;
+
+                        }
+                        div.row_tit{
+                            width: 260px;
+                            height: 100%;
+                            float: left;
+                            box-sizing: border-box;
+                            padding-top: 20px;
+                            color: #222;
+                            padding-left: 40px;
+                        }
+                        div.row_desc{
+                            width: 800px;
+                            height: 100%;
+                            float: left;
+                            padding-top: 10px;
+                            box-sizing: border-box;
+                        }
+                    }
+                    div.row-3{
+                        select{
+                            width: 130px;
+                            height: 40px;
+                            background-image: url(../img/popup/select_bg.png);
+                            .backgroundOption;
+                            background-size: 15px;
+                            background-position-x: 95%;
+                            border: 1px solid #d0d0d0;
+
+                        }
+                        input{
+                            height: 40px;
+                            width: 300px;
+                        }
+                    }
+                    div.row-4{
+                        height: 180px;
+                        textarea{
+                            height: 160px;
+                            width: 100%;
+                            resize: none;
+                            outline: none;
+                            border: 1px solid #d0d0d0;
+                        }
+                    }
+                    div.row-5{
+                        height: 240px;
+                        border: 0px;
+                        padding-top: 25px;
+                        label.container{
+                            padding-top: 3px;
+                            font-size: 0.875rem;
+                            span.checkmark{
+                                width: 20px;
+                                height: 20px;
+                                
+                            }
+                        }
+                        .container .checkmark:after{
+                            top: 2px;
+                            left: 5px;
+                        }
+                        div.agree_desc{
+                            width: 100%;
+                            height: 160px;
+                            border: 1px solid #d0d0d0;
+                            box-sizing: border-box;;
+                            padding: 15px;
+                            font-size: 0.875rem;
+                            overflow-y: scroll;
+                            p{
+                                margin-bottom: 5px;;
+                            }
+                            p.margin_point{
+                                margin-bottom: 20px;
+                            }
+                        }
+                    }
+                }
+                div.insert_btn{
+                    cursor: pointer;
+                    width: 250px;
+                    height: 50px;
+                    background: @mainColor;
+                    margin: 0 auto;;
+                    border-radius: 50px;
+                    font-size: 1.125rem;
+                    color: white;
+                    font-weight: bold;
+                    text-align: center;
+                    line-height: 50px;
+                }
+
+                div.fna_nav{
+                    .wraps;
+                    height: 60px;
+                    border:2px solid #444;
+                    margin-top: 50px;
+
+                    div{
+                        cursor: pointer;
+                        width: 20%;
+                        float: left;
+                        height: 100%;
+                        background: white;
+                        text-align: center;;
+                        line-height: 60px;
+                        border-right: 2px solid #444;
+                        box-sizing: border-box;
+                        color: #666;
+                    }
+                    div#active{
+                        background: #444;
+                        color: white;
+                    }
+                    div.fna_nav5{
+                        border: 0px;
+                        float: right;
+                    }
+                }
+                div.fna_box{
+                    max-width: 1200px;
+                    margin: 50px auto;;
+                    ul{
+                        width: 100%;
+                        border-top: 2px solid #444;
+                        border-bottom: 2px solid #444;
+                        box-sizing: border-box;;
+                        li{
+                            height: 60px;
+                            box-sizing: border-box;;
+                            border-bottom: 1px solid #d0d0d0;
+                            position: relative;
+                            p{
+                                position: absolute;
+                                top: 50%;
+                                transform: translateY(-50%);
+                                padding-left: 20px;
+                                box-sizing: border-box;;
+                                span{
+                                    display: inline-block;
+                                    width: 20px;
+                                    height: 20px;
+                                    background: #999;
+                                    text-align: center;
+                                    font-size: 0.875rem;
+                                    font-weight: bold;
+                                    line-height: 20px;
+                                    border-radius: 100%;
+                                    color: white;
+                                    margin-right: 20px;
+                                }
+                                b{
+                                    margin-right: 40px;
+                                    color: #888;
+                                    letter-spacing: -1px;
+                                }
+                            }
+                           
+                        }
+                        div.hide_an{
+                            border-bottom: 1px solid #d0d0d0;
+                            position: relative;
+                            display: none;;
+
+                            p{
+                                padding-top: 30px;
+                                padding-bottom: 30px;
+                                background: #d0d0d0;
+                                span{
+                                    position: absolute;
+                                    top: 50%;
+                                    margin-left: 50px;
+                                    display: inline-block;
+                                    width: 20px;
+                                    height: 20px;
+                                    background: #20a6f2;
+                                    text-align: center;
+                                    font-size: 0.875rem;
+                                    font-weight: bold;
+                                    line-height: 20px;
+                                    border-radius: 100%;
+                                    color: white;
+                                    margin-right: 20px;
+                                    transform: translateY(-50%);
+
+                                }
+                                b{
+
+                                    width: 80%;
+                                    display: block;
+                                    word-break: keep-all;
+                                    line-height: 25px;
+                                    margin-left: 120px;
+                                }
+                            }
+                        }
+                        li:nth-last-child(1){
+                            border: 0px;
+                        }
+                    }
+                }
+                ul.numbering{
+                    text-align: center;
+                    li{
+                        cursor: pointer;
+                        display:inline-block;
+                        width: 30px;
+                        height: 30px;
+                        border: 1px solid #d0d0d0;
+                        margin: 10px;
+                        line-height: 30px;
+                        color: #777;
+                    }
+                    li#active{
+                        border: 1px solid @mainColor;
+                        color: @mainColor;
+                    }
+                }
+            }
         }
     }
 }
